[project]
name = "nonebot-plugin-imagetools"
version = "0.5.1"
description = "Nonebot2 简单图片操作插件"
authors = [
  {name = "meetwq", email = "meetwq@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.9"
dependencies = [
    "nonebot2>=2.3.0",
    "nonebot-plugin-alconna>=0.40.1,<1.0.0",
    "httpx>=0.20.0,<1.0.0",
    "pillow>=9.2.0",
    "pil-utils>=0.2.0",
]

[project.urls]
homepage = "https://github.com/devil233-ui/nonebot-plugin-imagetools"
repository = "https://github.com/devil233-ui/nonebot-plugin-imagetools"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.pyright]
pythonVersion = "3.9"
pythonPlatform = "All"
typeCheckingMode = "basic"

[tool.ruff]
line-length = 88
target-version = "py39"

[tool.ruff.lint]
select = ["E", "W", "F", "UP", "C", "T", "PYI", "PT", "Q"]
ignore = ["E402", "C901", "UP037", "E731"]